Fix for urls breaking out of containers when the urls are really long

--- a/source/less/VCO.Timeline.less
+++ b/source/less/VCO.Timeline.less
@@ -64,6 +64,12 @@
 	.user-select(none);
 	background-color:@color-background;
 	color:@color-text;
+	
+	&.vco-timeline-embed {
+		box-sizing:border-box;
+		border: 1px solid darken(@ui-background-color-darker, 10);
+		border-radius: 8px;
+	}
 }
 
 /* Portrait
